[build-system]
requires = [
    "setuptools >= 40.6.2",
    "wheel >= 0.30.0",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE"
testpaths = [
    "tests",
    "pyemv",
]

[tool.coverage.run]
branch = true
source = [
    "pyemv",
]
omit = [
    "tests/*",
    "setup.py",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "^@.*\\.overload", # Ignore @overload lines
    "pragma: no cover",
]
